packages/isar/test/errors/class/variable.dart
// only classes

import 'package:isar/isar.dart';

// Test case for variable annotation validation
// ignore_for_file: avoid_classes_with_only_static_members

// ignore: invalid_annotation_target - Test case for variable annotation validation
@collection
const t = 'hello';
